--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "base",
     "adobe"
   ],
-  "author": "@an_rei Andrei Oprea",
+  "author": "@ndreio Andrei Oprea",
   "license": "Apache",
   "devDependencies": {
     "grunt-contrib-watch": "~0.3.1",
@@ -37,7 +37,7 @@
     "grunt-contrib-clean": "~0.4.1",
     "grunt-zip": "~0.7.0",
     "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-topcoat": "0.0.5",
+    "grunt-topcoat": "*",
     "grunt-contrib-jade": "~0.5.0",
     "debug": "~0.7.2"
   }
