--- a/package.json
+++ b/package.json
@@ -1,44 +1,42 @@
 {
-  "name": "textarea",
+  "name": "topcoat-textarea",
   "version": "0.1.0",
-  "description": "TopCoat textarea",
+  "description": "Topcoat textarea",
   "main": "topcoat-textarea.css",
-  "topcoat": {
-    "utils": {
-      "topcoat/utils": ""
-    },
-    "controls": {
-      "topcoat/textarea-base": ""
-    }
-  },
   "directories": {
-    "test": "test"
+    "test": "test",
+    "lib": "src",
+    "bin": "css"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "prepublish": "grunt"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:topcoat/textarea.git"
   },
   "keywords": [
+    "textarea",
     "css",
     "topcoat",
     "base",
     "adobe"
   ],
-  "author": "@ndreio Andrei Oprea",
-  "license": "Apache",
+  "author": "@dam Kristofer Joseph",
+  "license": "Apache2",
   "devDependencies": {
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-nodeunit": "~0.1.2",
     "grunt": "~0.4.1",
+    "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-stylus": "~0.5.0",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-zip": "~0.7.0",
     "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-topcoat": "0.0.7",
     "grunt-contrib-jade": "~0.5.0",
-    "debug": "~0.7.2"
+    "grunt-simple-mocha": "~0.4.0"
+  },
+  "dependencies": {
+    "topcoat-utils": "~0.1.1",
+    "topcoat-textarea-base": "~0.2.0",
+    "topcoat-theme": "~0.4.1"
   }
 }
