--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "grunt-contrib-cssmin": "~0.6.0",
     "grunt-simple-mocha": "~0.4.0",
     "grunt-topdoc": "~0.1.3",
-    "topdoc-theme": "~0.2.6"
+    "topdoc-theme": "~0.2.6",
+    "topcoat-textarea-base": "~0.3.0"
   },
   "dependencies": {
     "topcoat-utils": "~0.1.1",
-    "topcoat-textarea-base": "~0.2.0",
-    "topcoat-theme": "~0.4.1"
+    "topcoat-theme": "~0.5.12"
   }
 }
